--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -14,15 +14,15 @@ img {
 }
 
 .v-app-bar {
-  background-color: white !important;
+  // background-color: white !important;
 }
 
 .v-main {
-  background-color: white;
+  // background-color: white;
 }
 
 .page-content {
-  background-color: white;
+  // background-color: white;
 }
 
 .v-application {
